from classes.energy import Energy


class OrganicWaste(Energy):
    def __init__(self, amount):
        super().__init__(amount)
